fix: fix and cleanup project